--- a/survey/index.html
+++ b/survey/index.html
@@ -278,7 +278,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   const form = document.getElementById("survey");
   const emailInput = document.getElementById("email");
-  const successMessage = document.getElementById("form-successs");
+  const successMessage = document.getElementById("form-success");
   const featureCheckboxes = document.querySelectorAll('input[name="features[]"]');
   const MAX_FEATURES = 5;
 
