--- a/index.html
+++ b/index.html
@@ -180,10 +180,9 @@ footer {
 </header>
 
 <section class="hero">
-  <h1>Battery cost and performance modeling — before you build cells</h1>
+  <h1>Connecting technical innovation to product-level value - Battery performance and cost modeling</h1>
   <p>
-    CellVision is an industry-built battery modeling tool to compare battery
-    chemistries, cell designs, and manufacturing costs. Now evolving into a
+    CellVision is an industry-built battery modeling tool for comparing technologies at the product level. Now evolving into a
     full SaaS platform.
   </p>
 
