Updated lingo on what cellvision does

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@ footer {
 <section class="section">
     <h2>What CellVision does</h2>
     <ul>
-        <li>Compare material chemistries</li>
-        <li>Predict full cell performance</li>
-        <li>Explore cell design trade-offs</li>
-        <li>Estimate manufacturing cost drivers</li>
+        <li>Compare battery technologies</li>
+        <li>Predict performance</li>
+        <li>Explore design trade-offs</li>
+        <li>Identify cost drivers</li>
     </ul>
 
     <div class="images">
